--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,23 +1,22 @@
-primary_name: "Your Name"
-secondary_name: ""
-navbar_name: "Your Name"
+primary_name: "Xinyu LUO"
+secondary_name: "Ethan"
+navbar_name: "Xinyu LUO"
 
 positions:
 - logo: /assets/images/badges/MIT_Social_circle.png  # Logo is optional
-  name: Position 1 with logo
-- name: Position 2 without logo
+  name: PhD Candidate @ City University of Hong Kong
 
 
-email: "your@email.com"
+email: "ethanxyluo(at)gmail.com"
 # cv_link: link-to-your-cv-file
-gscholar: xFmQpf4AAAAJ  # This is an example, replace it with your own Google Scholar ID
-github: your_github_id
-twitter: your_twitter_id  # Do not include the '@' symbol
+gscholar: XvPakUAAAAAJ  # This is an example, replace it with your own Google Scholar ID
+# github: your_github_id
+# twitter: your_twitter_id  # Do not include the '@' symbol
 # wechat_qrcode: /assets/images/etc/wechat.jpg
 # wechat_prompt: >-
 #   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
-# linkedin: your-linked-in-id
-# orcid: 0000-0000-0000-0000
+linkedin: www.linkedin.com/in/ethanxyluo
+orcid: 0009-0007-5229-8733
 
 short_bio_text_justify: false
 short_bio: >-
