--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,5 +1,5 @@
-primary_name: "Xinyu LUO"
-secondary_name: "Ethan"
+primary_name: "Xinyu LUO (Ethan)"
+secondary_name: ""
 navbar_name: "Xinyu LUO"
 
 positions:
@@ -15,7 +15,7 @@ gscholar: XvPakUAAAAAJ  # This is an example, replace it with your own Google Sc
 # wechat_qrcode: /assets/images/etc/wechat.jpg
 # wechat_prompt: >-
 #   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
-linkedin: www.linkedin.com/in/ethanxyluo
+linkedin: ethanxyluo
 orcid: 0009-0007-5229-8733
 
 short_bio_text_justify: false
