--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -7,7 +7,7 @@ positions:
   name: PhD Candidate @ City University of Hong Kong
 
 
-email: "ethanxyluo(at)gmail.com"
+email: "ethanxyluo@gmail.com"
 # cv_link: link-to-your-cv-file
 gscholar: XvPakUAAAAAJ  # This is an example, replace it with your own Google Scholar ID
 # github: your_github_id
