--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -42,16 +42,12 @@ education:
   position: B.Eng. in Information Engineering
   date: Sep. 2020 - Jun. 2024
 
-# experience:
-# - name: Peking University
-#   logo: /assets/images/badges/PKU_red.png
-#   position: Research Intern
-#   date: Sep. 2019 - Jul. 2021
+experience:
+- name: Simon Fraser University
+  logo: /assets/images/badges/sfu.jpeg
+  position: Research Intern
+  date: Jul. 2023 - Oct. 2023
 
 awards:
-- name: Award Name 2
-  date: 2024
-- name: Award Name 1 
-  date: 2021
-- name: A quick brown fox jumps over the lazy dog and runs away award
+- name: President's Scholarship of Southeast University
   date: 2021
