--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -28,7 +28,7 @@ short_bio: >-
   </p>
 
   <p>
-    Feel free to contact and communicate!
+    Feel free to contact me and communicate!
 
 portrait_url: /assets/images/photos/portrait.jpg
 # portrait_caption: >-
