--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -51,5 +51,5 @@ awards:
 - name: President's Scholarship of Southeast University
   date: 2021
 
-service:
-- name: EE1001
+# service:
+# - name: EE1001
