--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -7,7 +7,7 @@ positions:
   name: Ph.D. Candidate @ City University of Hong Kong
 
 
-email: "xinyuluo8@my.cityu.edu.hk"
+email: "xinyuluo8-c@my.cityu.edu.hk"
 # cv_link: link-to-your-cv-file
 gscholar: XvPakUAAAAAJ  # This is an example, replace it with your own Google Scholar ID
 # github: your_github_id
