--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -23,7 +23,7 @@ short_bio: >-
   <p>
     Hi, I am Xinyu Luo, a second-year Ph.D. student in the Department of Electrical Engineering at City University of Hong Kong under the supervision of <a href="https://hlli1991.github.io/" target="_blank">Prof. Haoliang Li</a> 
     and <a href="https://sites.google.com/view/brainsyslab/home" target="_blank">Prof. Arindam Basu</a> (co-supervisor). 
-    My research focus on domain shift learning and hardware-software co-design. Feel free to reach out and connect with me!
+    My research focus on transfer learning and hardware-software co-design. Feel free to reach out and connect with me!
 
 portrait_url: /assets/images/photos/portrait.jpg
 # portrait_caption: >-
